--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -26,6 +26,12 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install
-    - name: Run Tests
-      run: |
-        python manage.py test
+    - name: Azure WebApp
+      uses: Azure/webapps-deploy@v2
+      with:
+        # Name of the Azure Web App
+        app-name: atelie-livre
+        publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
+        package: ./
+        # Enter the start up command. For ex. dotnet run or dotnet run
+        startup-command: python manage.py runserver
