--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         # Name of the Azure Web App
         app-name: atelie-livre
-        publish-profile: ${{ secrets.AZURE_CREDENTIALS }}
+        publish-profile: ${{ secrets.AZURE_CRENDENTIALS }}
         package: ./
         # Enter the start up command. For ex. dotnet run or dotnet run
         startup-command: python manage.py runserver
