--- a/.github/workflows/django-deploy.yml
+++ b/.github/workflows/django-deploy.yml
@@ -26,6 +26,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install pipenv
         pipenv install
+        pipenv shell
     - name: Azure WebApp
       uses: azure/webapps-deploy@v2
       with:
